2009-Nov-5  weaver	Added vmon histograms to bld event builder.  Fixed bug which prevented damage 0x8000 from
			sometimes propagating up.  Now, damage 0x8000 is marked on the incomplete contribution and
			damage 0x10000 is propagated up.  XtcIterator changed accordingly.
2009-Oct-28 weaver	Tag V01-05-00.  Removed Recorder level.  Fixed ControlStreams bug which caused damage 0x8000
			on Configure.
2009-Oct-8  cpo         Fix bug with run number allocation during automatic reconfig when changing config db.  Tagged V01-03-02.
2009-Oct-8  tomytsai    Add procInfo field into RceProxyMsg structure in rceProxy library
2009-Oct-8  weaver      Tag V01-04-00.  Evr retrieves opcode from configuration db.
			Changed event-builder to only use Sequence::fiducials() from BLD and no other Seq fields.
2009-Oct-7      caf     Version to support logbook entries and filename convention.  Tag V01-03-00.
2009-Sep-30     weaver/cpo Put in kludge to avoid corrupt xtc files where we don't do a fixup for dropped BLD contributions.
2009-Sep-29 tomytsai    Add rceProxy library
2009-Sep-29 weaver  Fixed segment level startup "race".  Protected against configuration TC buffer
            overflows.
2009-Sep-24 cpo Support for acqiris calibrations.  Also made outoforder damage persistent in acqiris until executable restarted.  Tag V01-02-00.
2009-Sep-11 weaver  Added payload to transitions from control level (for recording configuration).
            Capped printout from event-builders.
2009-Sep-10 tomytsai  Add Epics data collector level 1 (segment) node library in pds/epicsArch.
2009-Aug-22 weaver  Fixed overflow of nbins in MonDescXXX.  Added method for
            removing groups from MonCds.
2009-Aug-18 weaver  Tag V01-01-00.  Added Waveform and Image classes to mon with no
            integrating options.
2009-Aug-15 weaver  Tag V01-00-03.  Removed MsgAppliance usage.  Adjusted Acqiris
            OutOfSync checking for master EVG rate tolerances and fiducial
            count rollover.