@@ -6,17 +6,14 @@
 namespace Pds {
 
   class PartitionMember;
-  class VmonEb;
 
   class EventStreams: public WiredStreams {
   public:
     enum { netbufdepth = 8 };
     enum { EbDepth     = 16 };
-//  enum { MaxSize     = 4*1024*1024 };
     enum { MaxSize     = 16*1024*1024 };
 
-    EventStreams(PartitionMember& cmgr,
-		 VmonEb* vmoneb=0);
+    EventStreams(PartitionMember& cmgr);
     virtual ~EventStreams();
   };
 
