@@ -1,13 +1,11 @@
 #ifndef ODFSEGSTREAMS_HH
 #define ODFSEGSTREAMS_HH
 
-//#include "AckStreams.hh"
 #include "pds/utility/WiredStreams.hh"
 
 namespace Pds {
 
   class PartitionMember;
-  // class VmonAppliance;
 
   class SegStreams : public WiredStreams {
   public:
@@ -16,9 +14,6 @@ namespace Pds {
     SegStreams(PartitionMember&);
 
     virtual ~SegStreams();
-
-  private:
-    //  VmonAppliance* _vmom_appliance;
   };
 
 }
