@@ -84,46 +84,3 @@ int EbEventBase::timeouts(const EbTimeouts& ebtmo) {
   }
   return --_timeouts;
 }
-
-
-/*
-** ++
-**
-**    Simple debugging tool to format and dump the contents of the object...
-**
-** --
-*/
-
-#include <stdio.h>
-
-void EbEventBase::dump(int number)
-  {
-    /*
-  Sequence& sequence = (Sequence&)_key.pulseId;
-  printf(" Event #%d @ address %08X has sequence %08X%08X service %X type %X\n",
-         number,
-         (int)this,
-         sequence.highAll(),
-         sequence.low(),
-         sequence.service(),
-         sequence.type());
-    */
-  printf(" Event #%d @ address %p\n",
-	 number, this);
-  printf("   Forward link -> %p, Backward link -> %p\n",
-         forward(), reverse());
-  printf("   Contributions seen/requested = ");
-  _contributions.remaining().print();
-  printf("/");
-  _contract.print();
-  printf("\n");
-  printf("   Allocations   seen/requested = ");
-  _allocated.remaining().print();
-  printf("/");
-  _contract.print();
-  printf("\n");
-
-  //  printf("   Datagram address = %d, %08X (hex)\n",
-  //         (int)_datagram, (int)_datagram);
-  }
-
