@@ -1,3 +1,4 @@
+2009-Nov-10 weaver	Tag V01-06-00.  Segregated bld into a separate "segment-level" event builder.
 2009-Nov-5  weaver	Added vmon histograms to bld event builder.  Fixed bug which prevented damage 0x8000 from
 			sometimes propagating up.  Now, damage 0x8000 is marked on the incomplete contribution and
 			damage 0x10000 is propagated up.  XtcIterator changed accordingly.
